# kdev-go

./: CMakeLists.txt  Messages.sh  README.md  builtins.go  godebug.cpp  godebug.h  gohighlighting.cpp  gohighlighting.h  golangparsejob.cpp  golangparsejob.h  kdev-go.desktop.in  kdev-go.kdev4  kdevgo.json  kdevgoplugin.cpp  kdevgoplugin.h
app_templates/: CMakeLists.txt
app_templates/console_app/: %{PROJECTDIRNAME}.kdev4  console_app.kdevtemplate
buildsystem/: CMakeLists.txt  builddirchooser.cpp  builddirchooser.h  builddirchooser.ui  builder.cpp  builder.h  buildjob.cpp  buildjob.h  buildsystem.cpp  buildsystem.h  buildsystem.json  buildsystem.qrc  buildsystem.rc  executabletargetitem.cpp  executabletargetitem.h  preferences.cpp  preferences.h  utils.cpp  utils.h
codecompletion/: CMakeLists.txt  completiondebug.cpp  completiondebug.h  context.cpp  context.h  gocompletionexport.h  model.cpp  model.h  typematch.cpp  typematch.h  worker.cpp  worker.h
codecompletion/items/: completionitem.cpp  completionitem.h  functionitem.cpp  functionitem.h  importcompletionitem.cpp  importcompletionitem.h
codecompletion/tests/: CMakeLists.txt  testcompletion.cpp  testcompletion.h
duchain/: CMakeLists.txt  contextbuilder.cpp  contextbuilder.h  declarationbuilder.cpp  declarationbuilder.h  duchaindebug.cpp  duchaindebug.h  expressionvisitor.cpp  expressionvisitor.h  goduchainexport.h  goducontext.cpp  goducontext.h  helper.cpp  helper.h  typebuilder.cpp  typebuilder.h  usebuilder.cpp  usebuilder.h
duchain/builders/: contextbuilder.cpp  contextbuilder.h  declarationbuilder.cpp  declarationbuilder.h  typebuilder.cpp  typebuilder.h  usebuilder.cpp  usebuilder.h
duchain/declarations/: functiondeclaration.cpp  functiondeclaration.h  functiondefinition.cpp  functiondefinition.h
duchain/navigation/: declarationnavigationcontext.cpp  declarationnavigationcontext.h  navigationwidget.cpp  navigationwidget.h
duchain/tests/: CMakeLists.txt  testduchain.cpp  testduchain.h
duchain/types/: gochantype.cpp  gochantype.h  gofunctiontype.cpp  gofunctiontype.h  gointegraltype.cpp  gointegraltype.h  gomaptype.cpp  gomaptype.h  gostructuretype.cpp  gostructuretype.h
gometalinter/: CMakeLists.txt  gometalinter.json  gometalinter.qrc  gometalinter.rc  job.cpp  job.h  plugin.cpp  plugin.h  problemmodel.cpp  problemmodel.h
parser/: CMakeLists.txt  go.g  goparserexport.h  main.cpp  parsesession.cpp  parsesession.h
parser/test/: CMakeLists.txt  main.go  parsertest.cpp  parsertest.h  test.file  utf8.go
